<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.studiycase1.MainActivity">


    <TextView
        android:id="@+id/judul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judul"
        android:textStyle="bold"
        android:textSize="@dimen/judulSize"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/top_judul"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/subjudul"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/judul"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/size_sub"
        android:layout_marginTop="@dimen/top_subjudul"
        android:text="@string/sub_judul" />

    <EditText
        android:id="@+id/editText_makan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subjudul"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_top_editMakan"
        android:ems="10"
        android:hint="@string/editText_makan" />

    <EditText
        android:id="@+id/editText_porsi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/editText_makan"
        android:layout_below="@+id/editText_makan"
        android:ems="10"
        android:hint="@string/editText_porsi"/>

    <Button
        android:id="@+id/button_eatbus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_porsi"
        android:width="160dp"
        android:layout_marginTop="@dimen/margin_top_editMakan"
        android:layout_alignStart="@id/judul"
        android:text="@string/button_eatbus"
        android:onClick="eatbus"
        android:textStyle="bold"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/button_abnormal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/judul"
        android:layout_below="@+id/editText_porsi"
        android:layout_marginTop="@dimen/margin_top_editMakan"
        android:width="160dp"
        android:text="@string/button_abnormal"
        android:onClick="abnormal"
        android:textStyle="bold"
        android:background="@color/colorAccent"
        android:textColor="@android:color/white"/>


</RelativeLayout>
