<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.studiycase1.MainActivity">


    <TextView
        android:id="@+id/judul_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/judul_second"
        android:textStyle="bold"
        android:textSize="@dimen/judulSize"
        android:textAlignment="center"
        android:layout_marginTop="@dimen/top_judul"
        android:layout_alignParentTop="true"/>

    <TextView
        android:id="@+id/subjudul_second"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/judul_second"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="@dimen/size_sub"
        android:layout_marginTop="@dimen/top_subjudul"
        android:text="@string/sub_judul" />

    <TextView
        android:id="@+id/textView_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subjudul_second"
        android:gravity="center"
        android:layout_marginTop="@dimen/margin_top_textview"
        android:textSize="@dimen/size_view1"
        android:text="@string/textView_menu" />

    <TextView
        android:id="@+id/textView_makan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/textView_menu"
        android:layout_marginTop="@dimen/margin_top_textview2"
        android:textStyle="bold"
        android:textSize="@dimen/size_view2"/>

    <TextView
        android:id="@+id/textView_macam"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/textView_makan"
        android:layout_marginTop="@dimen/margin_top_textview"
        android:textSize="@dimen/size_view1"
        android:text="@string/textView_macam" />

    <TextView
        android:id="@+id/textView_porsi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/textView_macam"
        android:layout_marginTop="@dimen/margin_top_textview2"
        android:textStyle="bold"
        android:textSize="@dimen/size_view2"/>

    <TextView
        android:id="@+id/textView_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/textView_porsi"
        android:layout_marginTop="@dimen/margin_top_textview"
        android:textSize="@dimen/size_view1"
        android:text="@string/textView_price" />

    <TextView
        android:id="@+id/textView_harga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_below="@+id/textView_price"
        android:layout_marginTop="@dimen/margin_top_textview2"
        android:textStyle="bold"
        android:textSize="@dimen/size_view2"
        android:text="TextView" />


</RelativeLayout>
